--- a/16/index.css
+++ b/16/index.css
@@ -70,14 +70,37 @@ body{
 
 /*homework*/
 .rook{
-    width: 25px;
+    width: 18px;
     height: 50px;
     position: relative;
     top: 25px;
-    left: 38px;
+    left: 43px;
     background-color: var(--black-figure-color);
 }
 
+.rook::before{
+    width: 40px;
+    height: 18px;
+    content: " ";
+    display: block;
+    position: relative;
+    top: 0px;
+    left: -11px;
+    background-color: transparent;
+    border-style: solid;
+    border-width: 0px;
+    border-left-width: 10px;
+    border-bottom-width: 10px;
+    border-right-width: 18px;
+    border-color: var(--black-figure-color);
+}
+
+
+
+
+
+
+/*
 .rook_top1{
     width: 9px;
     height: 9px;
@@ -145,3 +168,4 @@ body{
 .rook_bottom2.white{
     background-color: var(--white-figure-color);
 }
+*/
